# TransportGuide

./: .gitignore  CMakeLists.txt  README.md  bus.cpp  bus.h  bus.proto  json.cpp  json.h  json_api.cpp  json_api.h  json_parser.cpp  main.cpp  map_builder.cpp  map_builder.h  projector_interface.h  router.h  router.proto  scanline_compressed_projection.cpp  scanline_compressed_projection.h  scanline_projection.cpp  scanline_projection.h  stop.cpp  stop.h  stop.proto  svg.cpp  svg.h  transport_catalog.proto  transport_guide.cpp  transport_manager.cpp  transport_manager.h  transport_manager_command.h
svg/: svg.cpp  svg.h  svg_test.cpp
